[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Aleksey Shafranskiy <smolett1974@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
